crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_update_all_installed_refreshes_manifest_without_installed_tracks.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: "(update_summary(&updated, tempdir.path())?, client.text_request_count(),\nclient.byte_request_count(),)"
---
(
    [],
    1,
    0,
)
