crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_update_composer_ignores_installed_non_v2_tracks.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: "(update_summary(&updated, tempdir.path())?,\ntrack_records_summary(&listed_after_update, tempdir.path())?,\nbyte_downloads_during_update,)"
---
(
    [
        InstallSnapshot {
            resource_name: "composer",
            track: "2",
            artifact_version: "2.8.1-pv1",
            current_artifact_path: "home/.pv/resources/composer/2/releases/2.8.1-pv1",
            manifest_source: "Latest",
            revoked_latest: None,
            downloaded_from_cache: false,
        },
    ],
    [
        TrackRecordSnapshot {
            resource_name: "composer",
            track: "1",
            installed_version: "1.0.0-pv1",
            current_artifact_path: "home/.pv/resources/composer/1/releases/1.0.0-pv1",
            usage_count: 0,
        },
        TrackRecordSnapshot {
            resource_name: "composer",
            track: "2",
            installed_version: "2.8.1-pv1",
            current_artifact_path: "home/.pv/resources/composer/2/releases/2.8.1-pv1",
            usage_count: 0,
        },
    ],
    1,
)
