crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_update_php_pairs_preserves_existing_php_ini.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: "install_summaries(updated.installs(), tempdir.path())?"
---
[
    InstallSnapshot {
        resource_name: "php",
        track: "8.4",
        artifact_version: "8.4.9-pv1",
        current_artifact_path: "home/.pv/resources/php/8.4/releases/8.4.9-pv1",
        manifest_source: "Latest",
        revoked_latest: None,
        downloaded_from_cache: false,
    },
    InstallSnapshot {
        resource_name: "frankenphp",
        track: "8.4",
        artifact_version: "8.4.9-pv1",
        current_artifact_path: "home/.pv/resources/frankenphp/8.4/releases/8.4.9-pv1",
        manifest_source: "Latest",
        revoked_latest: None,
        downloaded_from_cache: false,
    },
]
