crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_update_php_pairs_second_artifact_failure_preserves_pair_state.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: "(result, state_before_update, state_after_update, old_php_release_exists,\nnew_php_release_exists, php_current_target, byte_downloads_during_update,)"
---
(
    Err(
        Resources(
            HttpRequestFailed {
                url: "https://artifacts.example.test/frankenphp-8.4.9-pv1-darwin-arm64.tar.gz",
                reason: "no scripted byte response",
            },
        ),
    ),
    [
        RawTrackRecordSnapshot {
            resource_name: "frankenphp",
            track: "8.4",
            desired_state: "Installed",
            installed_version: Some(
                "8.4.8-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/frankenphp/8.4/releases/8.4.8-pv1",
            ),
            usage_count: 0,
            removal_prune: false,
            removal_force: false,
        },
        RawTrackRecordSnapshot {
            resource_name: "php",
            track: "8.4",
            desired_state: "Installed",
            installed_version: Some(
                "8.4.8-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/php/8.4/releases/8.4.8-pv1",
            ),
            usage_count: 0,
            removal_prune: false,
            removal_force: false,
        },
    ],
    [
        RawTrackRecordSnapshot {
            resource_name: "frankenphp",
            track: "8.4",
            desired_state: "Installed",
            installed_version: Some(
                "8.4.8-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/frankenphp/8.4/releases/8.4.8-pv1",
            ),
            usage_count: 0,
            removal_prune: false,
            removal_force: false,
        },
        RawTrackRecordSnapshot {
            resource_name: "php",
            track: "8.4",
            desired_state: "Installed",
            installed_version: Some(
                "8.4.8-pv1",
            ),
            current_artifact_path: Some(
                "home/.pv/resources/php/8.4/releases/8.4.8-pv1",
            ),
            usage_count: 0,
            removal_prune: false,
            removal_force: false,
        },
    ],
    true,
    false,
    Some(
        "releases/8.4.8-pv1",
    ),
    3,
)
