crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_update_php_pairs_without_installed_tracks_does_not_refresh_manifest.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: "(install_summaries(updated.installs(), tempdir.path())?,\nclient.text_request_count(),)"
---
(
    [],
    0,
)
