crates/resources/tests/snapshots/managed_resource_commands__managed_resource_commands_update_requires_fresh_manifest_after_cache_exists.snap
---
source: crates/resources/tests/managed_resource_commands.rs
expression: update
---
Err(
    Resources(
        HttpRequestFailed {
            url: "https://artifacts.example.test/manifest.json",
            reason: "offline",
        },
    ),
)
